...
          ),
          Padding(
            padding: const EdgeInsets.all(16.0),
            child: Align(
              alignment: Alignment.bottomRight,
              child: FloatingActionButton(
                tooltip: 'AddTaskButton',
                onPressed: () => _onAddTapped(context),
                child: Icon(Icons.add),
                backgroundColor: AppColors.primaryColor,
              ),
            ),
          )
...
